@@ -20,16 +20,26 @@
 #include "common.h"
 #include "sysinfo.h"
 
+static long	hertz = 0;
+
 int	SYSTEM_UPTIME(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *result)
 {
 #if defined(HAVE_LIBPERFSTAT)
 	perfstat_cpu_total_t	ps_cpu_total;
 
+	if (0 == hertz)
+	{
+		hertz = sysconf(_SC_CLK_TCK);
+
+		/* make sure we do not divide by 0 */
+		assert(hertz);
+	}
+
 	/* AIX 6.1 */
 	if (-1 == perfstat_cpu_total(NULL, &ps_cpu_total, sizeof(ps_cpu_total), 1))
 		return SYSINFO_RET_FAIL;
 
-	SET_UI64_RESULT(result, (zbx_uint64_t)((double)ps_cpu_total.lbolt / 100));
+	SET_UI64_RESULT(result, (zbx_uint64_t)((double)ps_cpu_total.lbolt / hertz));
 
 	return SYSINFO_RET_OK;
 #else
