@@ -25,7 +25,7 @@ int	SYSTEM_UPTIME(const char *cmd, const char *param, unsigned flags, AGENT_RESU
 #ifdef HAVE_SYSINFO_UPTIME
 	struct sysinfo info;
 
-	if( 0 == sysinfo(&info))
+	if (0 == sysinfo(&info))
 	{
 		SET_UI64_RESULT(result, info.uptime);
 		return SYSINFO_RET_OK;
@@ -34,19 +34,18 @@ int	SYSTEM_UPTIME(const char *cmd, const char *param, unsigned flags, AGENT_RESU
 		return SYSINFO_RET_FAIL;
 #else
 #ifdef HAVE_FUNCTION_SYSCTL_KERN_BOOTTIME
-	int	mib[2],len;
 	struct timeval	uptime;
-	int	now;
+	int		mib[2], len, now;
 
-	mib[0]=CTL_KERN;
-	mib[1]=KERN_BOOTTIME;
+	mib[0] = CTL_KERN;
+	mib[1] = KERN_BOOTTIME;
 
-	len=sizeof(uptime);
+	len = sizeof(uptime);
 
-	if(sysctl(mib,2,&uptime,(size_t *)&len,NULL,0) != 0)
-		return	SYSINFO_RET_FAIL;
+	if (0 != sysctl(mib, 2, &uptime, (size_t *)&len, NULL, 0))
+		return SYSINFO_RET_FAIL;
 
-	now=time(NULL);
+	now = time(NULL);
 
 	SET_UI64_RESULT(result, now-uptime.tv_sec);
 	return SYSINFO_RET_OK;
@@ -60,14 +59,10 @@ int	SYSTEM_UPTIME(const char *cmd, const char *param, unsigned flags, AGENT_RESU
 	long          hz;
 	long          secs;
 
-	hz = sysconf(_SC_CLK_TCK);
-
 	/* open kstat */
 	kc = kstat_open();
 	if (0 == kc)
-	{
 		return SYSINFO_RET_FAIL;
-	}
 
 	/* read uptime counter */
 	kp = kstat_lookup(kc, "unix", 0, "system_misc");
@@ -77,12 +72,18 @@ int	SYSTEM_UPTIME(const char *cmd, const char *param, unsigned flags, AGENT_RESU
 		return SYSINFO_RET_FAIL;
 	}
 
-	if(-1 == kstat_read(kc, kp, 0))
+	if (-1 == kstat_read(kc, kp, 0))
 	{
 		kstat_close(kc);
 		return SYSINFO_RET_FAIL;
 	}
 	kn = (kstat_named_t*)kstat_data_lookup(kp, "clk_intr");
+
+	hz = sysconf(_SC_CLK_TCK);
+
+	/* make sure we do not divide by 0 */
+	assert(hz);
+
 	secs = kn->value.ul / hz;
 
 	/* close kstat */
